# Tauri.Desktop.App

./: .gitignore  README.md  package-lock.json  package.json
src/: main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/downloadManagerView/: index.tsx
src/components/openServerView/: index.tsx  style.tsx
src/components/settingsView/: index.tsx  serverItem.tsx  serverList.tsx  settingStore.ts
src/components/sidebar/: index.tsx  style.tsx  withToolTip.tsx
src/injected/: main.js
src/shell/: index.tsx  styles.tsx
src/store/: actions.ts  index.ts  rootreducer.ts
src/store/actions/: sidebar.ts
src/store/reducers/: currentView.ts
